clusters/microk8s/apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: https
    port: 9443
    targetPort: 9443
    protocol: TCP
  - name: edge
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: portainer
